# datamarketplace

./: .env.example  .gitignore  CLAUDE.md  KEY_MANAGEMENT.md  PLAN_NOTES.md  README.md  ROADMAP_NOTES.md  RUST_INGEST_DEPLOY.md  amplify.yml  ci.yml  datamarketplace-fixes-punchlist.md  datamarketplace-fixes-v2.md  datamarketplace-fixes-v3.md  datamarketplace-fixes-v4.md  datamarketplace-implementation-plan.md  docker-compose.yml  frontend-auth-hardening.md
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  init_db.py  requirements.txt  run-backend.bat  run-backend.sh
backend/app/: admin.py  admin_authz.py  audit.py  auth.py  auth_dependencies.py  authz.py  collect.py  commission.py  contact.py  crypto.py  db.py  disputes.py  filesafety.py  ingest.py  ingest_client.py  init_db.py  internal.py  keys.py  lifecycle.py  listings.py  mailer.py  main.py  malware.py  metrics.py  models.py  notifications.py  oauth.py  payments.py  pii.py  profile.py  ratelimit.py  requests.py  reviews.py  routes.py  schemas.py  seed.py  seed_listings.py  social_auth.py  staging_dedup.py  storage.py  (+3 more)
backend/migrations/: env.py
backend/migrations/versions/: 2a6bbcd2e938_p5b_collection_dispatch_entries.py  431b51c7dfce_s4a_submission_quarantine_pii.py  52545c08371e_p4b_purchases_ledger.py  56b389a8527d_idempotency_ledger_unique_ref_stripe_.py  571aef03d325_p4a_listings.py  63ef5eb6f4b0_add_accepted_at_to_submissions.py  73604f2fa775_u2_contact_messages.py  8cacc4229083_s3_account_security_columns.py  a871b7fb4fa7_h4_mfa.py  acdb3a268e6e_cast_status_columns_to_enum.py  ae38be698516_p6a_submission_source.py  b1f4e7a9c2d0_e3_submission_download_count.py  c1a2b3d4e5f6_submission_key_staging.py  c1cebd6bb551_add_accepted_keys_and_submission_key_.py  c7d2a1f80e34_p2_submission_key_staging.py  ca411dee21d0_baseline.py  ce0b3114c871_p7b_request_category.py  d6f267ce3037_s4b_submission_flags.py  d7e8f9a0b1c2_user_identity_social_login.py  d8a1c2b3e4f5_admin_rbac.py  e4b4cd7d584b_p7a_commission_amount.py  f2d8737a9cda_h2_audit_log.py  f45a73106559_float_to_numeric_money_columns.py  f62dba7daa59_add_reviews_disputes.py  f82c4d855f09_p5a_request_collect_mode.py
backend/tests/: conftest.py  test_acceptance_window.py  test_admin_panel.py  test_allocation.py  test_allocation_race.py  test_anomalies.py  test_audit.py  test_auth_logout.py  test_authz_idor.py  test_auto_release.py  test_change_password.py  test_collect_dispatch.py  test_collect_mode.py  test_commission.py  test_concierge.py  test_contact.py  test_cors_origins.py  test_cross_mode.py  test_cross_provider_dedup.py  test_crypto.py  test_cutover_gate.py  test_db_tls_policy.py  test_decimal_money.py  test_dedup_real_db.py  test_deploy_config.py  test_download_disposition.py  test_e2e_full_loop.py  test_email_verification.py  test_filesafety.py  test_gdpr.py  test_idempotency.py  test_ingest.py  test_ingest_quality.py  test_internal_callback.py  test_key_normalization.py  test_lifecycle.py  test_listing_takedown.py  test_listings.py  test_login_lockout.py  test_malware.py  (+20 more)
frontend/: .env.example  Dockerfile  app.vue  content.config.ts  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/.nuxt/: components.d.ts  eslint.config.mjs  imports.d.ts  nitro.json  nuxt.d.ts  nuxt.json  nuxt.node.d.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.server.json
frontend/.nuxt/dev/: index.mjs  index.mjs.map
frontend/.nuxt/manifest/: latest.json
frontend/.nuxt/tailwind/: postcss.mjs
frontend/.nuxt/types/: build.d.ts  components.d.ts  imports.d.ts  modules.d.ts  nitro-imports.d.ts  plugins.d.ts  runtime-config.d.ts
frontend/assets/css/: main.css
frontend/components/: AppFooter.vue  AppHeader.vue  BackButton.vue  ThreeModes.vue
frontend/components/account/: MfaSetup.vue
frontend/components/admin/: AdminShell.vue  StepUpModal.vue
frontend/composables/: useAdmin.ts  useApi.ts  useRequests.ts  useToast.ts
frontend/middleware/: admin.ts  auth.global.ts  auth.ts
frontend/pages/: about.vue  contact.vue  index.vue  login.vue  privacy.vue  profile.vue  purchases.vue  register.vue  styleguide.vue  terms.vue
frontend/plugins/: auth.client.ts  session.client.ts
frontend/public/: robots.txt  sitemap.xml
frontend/stores/: auth.ts
frontend/tests/: acceptanceWindow.spec.ts  statusTone.spec.ts
frontend/types/: submission.ts
frontend/utils/: acceptanceWindow.ts  statusTone.ts
infra/: compute.tf  dns.tf  ecr.tf  iam.tf  ingest.tf  kms.tf  network.tf  outputs.tf  outputs_dns.tf  rds.tf  s3.tf  scheduler.tf  secrets.tf  terraform.tfvars.example  variables.tf  variables_dns.tf  versions.tf
ingest-service/: Cargo.toml  Dockerfile  README.md
ingest-service/src/: av.rs  contract.rs  keys.rs  lib.rs  limits.rs  main.rs  media.rs  neardup.rs  tabular.rs  worker.rs
ingest-service/tests/: av.rs  limits.rs  media.rs  neardup.rs  parity.rs
rust-ingest/: Cargo.toml  Dockerfile  README.md
rust-ingest/src/: callback.rs  config.rs  contract.rs  error.rs  keys.rs  lib.rs  main.rs  metrics.rs  pipeline.rs  queue.rs  staging.rs  storage.rs  tabular.rs
rust-ingest/src/media/: audio.rs  ffmpeg.rs  image.rs  mod.rs
rust-ingest/tests/: contract.rs
(+47 files in other folders)
