[package]
name = "rowbound-ingest"
version = "0.1.0"
edition = "2021"
description = "Rowbound heavy-compute ingest service: tabular validation, normalized key hashing, dedup-hash + sample extraction. Stateless — computes, never settles (see PLAN: Rust computes, Python settles)."

[lib]
name = "rowbound_ingest"
path = "src/lib.rs"

[[bin]]
name = "rowbound-ingest"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
csv = "1"
base64 = "0.22"
# Media (P3) — pure-Rust image decode + perceptual (DCT pHash) hashing. No ffmpeg
# needed for the image path, so it stays `cargo test`-verifiable.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif"] }
image_hasher = "2"

# Queue worker (P4) — only compiled for the deploy image (`--features queue`), so
# the default build + `cargo test` stay fast and AWS-SDK-free.
aws-config = { version = "1", optional = true, features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
sqlx = { version = "0.8", optional = true, default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }

# HTTP server (binary). The lib (compute) stays async-free so `cargo test` is fast.
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
queue = ["dep:aws-config", "dep:aws-sdk-sqs", "dep:aws-sdk-s3", "dep:sqlx", "dep:reqwest"]

[profile.release]
opt-level = 3
